--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "css-mqpacker": "^6.0.2",
+    "eslint": "^5.8.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "node-sass": "^4.7.2",
     "parcel-bundler": "^1.10.3"
   },
