--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/kidCubi/p5js-start#readme",
   "devDependencies": {
     "@material/button": "^0.42.0",
+    "autoprefixer": "^9.5.1",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "css-mqpacker": "^6.0.2",
