--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "private": true,
   "scripts": {
-    "start": "./node_modules/.bin/parcel --no-cache index.html",
-    "build": "./node_modules/.bin/parcel build index.html",
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,14 +24,16 @@
     "autoprefixer": "^9.6.1",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
+    "clean-webpack-plugin": "^3.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.2",
-    "parcel-bundler": "^1.12.3",
+    "html-webpack-plugin": "^3.2.0",
     "postcss-modules": "^1.4.1",
-    "sass": "^1.22.9",
+    "raw-loader": "^3.1.0",
     "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6"
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
     "@vaadin/router": "^1.2.1",
