--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
-    "polka": "next",
-    "sirv": "^0.4.6"
+    "polka": "^0.5.2",
+    "sirv": "^1.0.11",
+    "tree-sitter": "^0.19.0",
+    "tree-sitter-svelte": "^0.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -22,15 +24,15 @@
     "@babel/plugin-transform-runtime": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/runtime": "^7.10.4",
-    "@rollup/plugin-commonjs": "11.0.2",
-    "@rollup/plugin-node-resolve": "^7.0.0",
+    "@rollup/plugin-commonjs": "^18.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-replace": "^2.3.3",
     "npm-run-all": "^4.1.5",
-    "rollup": "^1.20.0",
+    "rollup": "^2.47.0",
     "rollup-plugin-babel": "^4.0.2",
-    "rollup-plugin-svelte": "^5.2.3",
-    "rollup-plugin-terser": "^5.3.0",
-    "sapper": "^0.27.16",
-    "svelte": "^3.23.2"
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "sapper": "^0.29.1",
+    "svelte": "^3.38.2"
   }
 }
